# Asistant

./: pyproject.toml
Pipelines/RAG/: DocumentGather.py
Utils/: __init__.py  audio.py  file_gather.py  transcriber.py  video_capture.py
configs/: configs.yaml
