[tool.poetry]
name = "assitant"
version = "0.1.0"
description = ""
authors = ["PhyAMR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.5.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
pycaw = "^20240210"
whisper = "^1.1.10"
speechrecognition = "^3.11.0"
opencv-python = "^4.10.0.84"
pyyaml = "^6.0.2"
ollama = "^0.3.3"
haystack-ai = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
